tests/fixtures/invalid/invalid-minlength-greater-than-maxlength.bprint
{
  "schemaVersion": 1.0,
  "namespace": "test.invalid",
  "description": "Invalid: minLength is greater than maxLength",
  "entity": {
    "primaryKey": { "partitionKey": "id" },
    "fields": [
      {
        "name": "id",
        "type": "string",
        "required": true
      },
      {
        "name": "code",
        "type": "string",
        "required": true,
        "constraints": {
          "minLength": 20,
          "maxLength": 5
        }
      }
    ]
  }
}

